--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,10 +7,14 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-    paths: Dockerfile, build-docker.py
+    paths: 
+      - 'Dockerfile'
+      - 'build-docker.py'
   pull_request:
     branches: [ master ]
-    paths: Dockerfile, build-docker.py
+    paths: 
+      - 'Dockerfile'
+      - 'build-docker.py'
   create:
     tags: [docker-v*.*.*]
     
