--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -35,7 +35,7 @@ jobs:
         run: python3 ./build-docker.py   
         
       - name: push
-        if: startsWith(github.ref, "refs/tags/docker-v")
+        if: startsWith(github.ref, 'refs/tags/docker-v')
         run: python3 ./build-docker.py --gitref ${{ github.ref }}
       
         
