--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/login-action@v1.8.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          password: ${{ secrets.DOCKER_ACCESSTOKEN }}
           logout: true
 
       - name: build 
