--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -18,6 +18,8 @@ on:
   
 jobs:
   docker-build:
+    env:
+      working-directory: "./docker"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2    
@@ -30,10 +32,12 @@ jobs:
           logout: true
 
       - name: build 
-        run: python3 ./build-docker.py   
+        working-directory: ${{env.working-directory}}
+        run: python3 ./build.py   
         
       - name: push
+        working-directory: ${{env.working-directory}}
         if: startsWith(github.ref, 'refs/tags/docker-v')
-        run: python3 ./build-docker.py --gitref ${{ github.ref }}
+        run: python3 ./build.py --gitref ${{ github.ref }}
       
         
