--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -31,6 +31,11 @@ jobs:
           password: ${{ secrets.DOCKER_ACCESSTOKEN }}
           logout: true
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install docker 
+
       - name: build 
         working-directory: ${{env.working-directory}}
         run: python3 ./build.py   
