refactor conan-build.py

--- a/recipes/config-build.json
+++ b/recipes/config-build.json
@@ -1,22 +1,19 @@
 {
+    "version": "snapshot",
+    "channel": "development",
+    "user": "disroop",
     "config":[
         {
             "hostprofile": "cortex-m4",
             "buildprofile": "default",
             "hostsettings": "build_type=Debug",
-            "excludes": ["test_package","cmake_vars","gcc_arm_none_eabi"],
-            "version": "snapshot",
-            "channel": "development",
-            "user": "disroop"
+            "excludes": ["cmake_vars","gcc_arm_none_eabi"]
         },
         {
             "hostprofile": "default",
             "buildprofile": "default",
             "hostsettings": "build_type=Debug",
-            "includes": ["cmake_vars","gcc_arm_none_eabi"],
-            "version": "snapshot",
-            "channel": "development",
-            "user": "disroop"
+            "includes": ["cmake_vars","gcc_arm_none_eabi"]
         }
     ]
 }
