--- a/recipes/config-build.json
+++ b/recipes/config-build.json
@@ -5,12 +5,22 @@
     "configurations":[
         {
             "hostsettings": ["build_type=Debug"],
+            "buildsettings": ["build_type=Release"],
+            "build": "missing",
             "includes": ["cmake_vars","gcc_arm_none_eabi"]
         },
         {
-            "hostprofile": ".profiles/gcc-arm-none-eabi-9",
+            "hostprofile": "/app/.profiles/arm-m4-debug",
             "buildprofile": "default",
-            "hostsettings": ["build_type=Debug"],
+            "buildsettings": ["build_type=Release"],
+            "build": "missing",
+            "excludes": ["cmake_vars","gcc_arm_none_eabi"]
+        },
+        {
+            "hostprofile": "/app/.profiles/arm-m4-release",
+            "buildprofile": "default",
+            "buildsettings": ["build_type=Release"],
+            "build": "missing",
             "excludes": ["cmake_vars","gcc_arm_none_eabi"]
         }
     ],
