--- a/recipes/stm32_hal_l4/CMakeLists.txt
+++ b/recipes/stm32_hal_l4/CMakeLists.txt
@@ -1,6 +1,5 @@
-PROJECT(stm32wb55_runtime C)
 cmake_minimum_required(VERSION 3.16)
-
+include(${CMAKE_CURRENT_BINARY_DIR}/cmake_vars.cmake)
 include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
 
 project(STM32_HAL_L4 C)
@@ -116,9 +115,165 @@ set(SOURCES
     ${STM_HAL_DIR}/Src/stm32l4xx_ll_usart.c
     ${STM_HAL_DIR}/Src/stm32l4xx_ll_usb.c
     ${STM_HAL_DIR}/Src/stm32l4xx_ll_utils.c)
+# set defines
+set(DEFINES)
+set(DEFINES -DEXTERNAL_SAI1_CLOCK_VALUE=${CONAN_OPT_EXTERNAL_SAI1_CLOCK_VALUE} ${DEFINES}) 
+set(DEFINES -DEXTERNAL_SAI2_CLOCK_VALUE=${CONAN_OPT_EXTERNAL_SAI2_CLOCK_VALUE} ${DEFINES}) 
+set(DEFINES -DHSE_STARTUP_TIMEOUT=${CONAN_OPT_HSE_STARTUP_TIMEOUT}  ${DEFINES}) 
+set(DEFINES -DHSE_VALUE=${CONAN_OPT_HSE_VALUE}                      ${DEFINES}) 
+set(DEFINES -DHSI_VALUE=${CONAN_OPT_HSI_VALUE}                      ${DEFINES}) 
+set(DEFINES -DLSE_STARTUP_TIMEOUT=${CONAN_OPT_LSE_STARTUP_TIMEOUT}  ${DEFINES}) 
+set(DEFINES -DLSE_VALUE=${CONAN_OPT_LSE_VALUE}                      ${DEFINES}) 
+set(DEFINES -DLSI_VALUE=${CONAN_OPT_LSI_VALUE}                      ${DEFINES}) 
+set(DEFINES -DMSI_VALUE=${CONAN_OPT_MSI_VALUE}                      ${DEFINES}) 
+set(DEFINES -DTICK_INT_PRIORITY=${CONAN_OPT_TICK_INT_PRIORITY}      ${DEFINES}) 
+set(DEFINES -DVDD_VALUE=${CONAN_OPT_VDD_VALUE}                      ${DEFINES}) 
+if(${CONAN_OPT_HAL_ADC_MODULE_ENABLED})
+    set(DEFINES HAL_ADC_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_CORTEX_MODULE_ENABLED})
+    set(DEFINES HAL_CORTEX_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_FLASH_MODULE_ENABLED})
+    set(DEFINES HAL_FLASH_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_GPIO_MODULE_ENABLED})
+    set(DEFINES HAL_GPIO_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_MODULE_ENABLED})
+    set(DEFINES HAL_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_NAND_MODULE_ENABLED})
+    set(DEFINES HAL_NAND_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_NOR_MODULE_ENABLED})
+    set(DEFINES HAL_NOR_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_CAN_LEGACY_MODULE_ENABLED})
+    set(DEFINES HAL_CAN_LEGACY_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_CAN_MODULE_ENABLED})
+    set(DEFINES HAL_CAN_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_COMP_MODULE_ENABLED})
+    set(DEFINES HAL_COMP_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_CRC_MODULE_ENABLED})
+    set(DEFINES HAL_CRC_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_CRYP_MODULE_ENABLED})
+    set(DEFINES HAL_CRYP_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_DAC_MODULE_ENABLED})
+    set(DEFINES HAL_DAC_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_DFSDM_MODULE_ENABLED})
+    set(DEFINES HAL_DFSDM_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_DMA_MODULE_ENABLED})
+    set(DEFINES HAL_DMA_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_RTC_MODULE_ENABLED})
+    set(DEFINES HAL_RTC_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_PWR_MODULE_ENABLED})
+    set(DEFINES HAL_PWR_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_RCC_MODULE_ENABLED})
+    set(DEFINES HAL_RCC_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_HCD_MODULE_ENABLED})
+    set(DEFINES HAL_HCD_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_I2C_MODULE_ENABLED})
+    set(DEFINES HAL_I2C_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_IRDA_MODULE_ENABLED})
+    set(DEFINES HAL_IRDA_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_IWDG_MODULE_ENABLED})
+    set(DEFINES HAL_IWDG_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_LCD_MODULE_ENABLED})
+    set(DEFINES HAL_LCD_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_LPTIM_MODULE_ENABLED})
+    set(DEFINES HAL_LPTIM_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_OPAMP_MODULE_ENABLED})
+    set(DEFINES HAL_OPAMP_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_PCD_MODULE_ENABLED})
+    set(DEFINES HAL_PCD_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_QSPI_MODULE_ENABLED})
+    set(DEFINES HAL_QSPI_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_SAI_MODULE_ENABLED})
+    set(DEFINES HAL_SAI_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_SD_MODULE_ENABLED})
+    set(DEFINES HAL_SD_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_SMARTCARD_MODULE_ENABLED})
+    set(DEFINES HAL_SMARTCARD_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_SMBUS_MODULE_ENABLED})
+    set(DEFINES HAL_SMBUS_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_SPI_MODULE_ENABLED})
+    set(DEFINES HAL_SPI_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_SRAM_MODULE_ENABLED})
+    set(DEFINES HAL_SRAM_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_SWPMI_MODULE_ENABLED})
+    set(DEFINES HAL_SWPMI_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_TIM_MODULE_ENABLED})
+    set(DEFINES HAL_TIM_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_TSC_MODULE_ENABLED})
+    set(DEFINES HAL_TSC_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_UART_MODULE_ENABLED})
+    set(DEFINES HAL_UART_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_USART_MODULE_ENABLED})
+    set(DEFINES HAL_USART_MODULE_ENABLED ${DEFINES}) 
+endif()
+if(${CONAN_OPT_HAL_WWDG_MODULE_ENABLED})
+    set(DEFINES HAL_WWDG_MODULE_ENABLED ${DEFINES}) 
+endif()
+
+if(${CONAN_OPT_INSTRUCTION_CACHE_ENABLE})
+    set(DEFINES INSTRUCTION_CACHE_ENABLE=1 ${DEFINES}) 
+else()
+    set(DEFINES INSTRUCTION_CACHE_ENABLE=0 ${DEFINES})
+endif()
+if(${CONAN_OPT_PREFETCH_ENABLE})
+    set(DEFINES PREFETCH_ENABLE=1 ${DEFINES}) 
+else()
+    set(DEFINES PREFETCH_ENABLE=0 ${DEFINES})
+endif()
+if(${CONAN_OPT_USE_FULL_ASSERT})
+    set(DEFINES USE_FULL_ASSERT=1 ${DEFINES}) 
+else()
+    set(DEFINES USE_FULL_ASSERT=0 ${DEFINES})
+endif()
+if(${CONAN_OPT_USE_RTOS})
+    set(DEFINES USE_RTOS=1 ${DEFINES}) 
+else()
+    set(DEFINES USE_RTOS=0 ${DEFINES})
+endif()
+if(${CONAN_OPT_USE_SPI_CRC})
+    set(DEFINES USE_SPI_CRC=1 ${DEFINES}) 
+else()
+    set(DEFINES USE_SPI_CRC=0 ${DEFINES})
+endif()
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Generic")
     add_library(${LIBRARY_NAME} STATIC ${SOURCES})
     target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include ${STM_HAL_DIR}/Inc ${CONAN_INCLUDE_DIRS})
-    target_compile_definitions(${LIBRARY_NAME} PUBLIC ${CONAN_DEFINES})
+    target_compile_definitions(${LIBRARY_NAME} PUBLIC ${DEFINES} ${CONAN_DEFINES})
 endif()
