--- a/config-build.json
+++ b/config-build.json
@@ -9,18 +9,18 @@
             "includes": ["cmake_vars","gcc_arm_none_eabi"]
         },
         {
-            "hostprofile": "/app/.profiles/arm-m4-debug",
+            "hostprofile": ".profiles/arm-m4-debug",
             "buildprofile": "default",
             "buildsettings": ["build_type=Release"],
             "build": "missing",
-            "excludes": ["cmake_vars","gcc_arm_none_eabi"]
+            "excludes": ["cmake_vars","gcc_arm_none_eabi","stm32_bsp_Iot_node"]
         },
         {
-            "hostprofile": "/app/.profiles/arm-m4-release",
+            "hostprofile": ".profiles/arm-m4-release",
             "buildprofile": "default",
             "buildsettings": ["build_type=Release"],
             "build": "missing",
-            "excludes": ["cmake_vars","gcc_arm_none_eabi"]
+            "excludes": ["cmake_vars","gcc_arm_none_eabi","stm32_bsp_Iot_node"]
         }
     ],
     "remotes": [
