--- a/recipes/stm32_bsp_iot_node/CMakeLists.txt
+++ b/recipes/stm32_bsp_iot_node/CMakeLists.txt
@@ -6,6 +6,6 @@ project(STM_BSP_IOT_NODE C ASM)
 set(CMAKE_C_STANDARD 99)
 
 find_package(stm32_hal_l4 REQUIRED)
-#if(${CMAKE_SYSTEM_NAME} STREQUAL "Generic")
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Generic")
     add_subdirectory(src)
-#endif()
+endif()
