--- a/recipes/stm32_runtime_l475/src/CMakeLists.txt
+++ b/recipes/stm32_runtime_l475/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(LIBRARY_NAME "stm32_runtime_l475")
 if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
     set(STARTUP_FILE ${CMAKE_CURRENT_LIST_DIR}/gcc/startup_stm32l475xx.s)
     
@@ -15,3 +16,4 @@ set(SOURCES
 add_library(${LIBRARY_NAME} STATIC ${SOURCES})
 target_include_directories(${LIBRARY_NAME} PUBLIC ${CORE_DEVICE_DIR}/Include)
 target_link_libraries(${LIBRARY_NAME} PRIVATE stm32_cmsis_device_l4::stm32_cmsis_device_l4)
+target_compile_definitions(${LIBRARY_NAME} PRIVATE "STM32L475xx")
