--- a/recipes/stm32_bsp_iot_node/test_package/CMakeLists.txt
+++ b/recipes/stm32_bsp_iot_node/test_package/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 include(${CMAKE_CURRENT_BINARY_DIR}/cmake_vars.cmake)
 include(${CMAKE_CURRENT_BINARY_DIR}/conan_toolchain.cmake)
 # Set the project name
-project(test CXX)
+project(test C)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_C_STANDARD 99)
