--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     python3-pip \
     git=1:2.25.1-1ubuntu3 \
     clang=1:10.0-50~exp1 \
+    clang-tidiy=1:10.0-50~exp1 \
+    iwyu \
     make=4.2.1-1.2 \
     llvm-11=1:11.0.0-2~ubuntu20.04.1 \
     && apt-get clean \
