--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,6 +24,7 @@ RUN ln -s /usr/bin/python3 /usr/bin/python \
     && ln -s /usr/bin/pip3 /usr/bin/pip
 
 RUN pip3 install conan==1.36.0
+RUN pip3 install invoke==1.5.0
 RUN pip3 install mumoco==0.2.1
 #TODO: This is only temporary
 RUN pip3 install eprint
