set version iwyu=8.0-3build1 and cppcheck=1.90-4build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,8 +10,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     git=1:2.25.1-1ubuntu3 \
     clang=1:10.0-50~exp1 \
     clang-tidy=1:10.0-50~exp1 \
-    iwyu \
-    cppcheck \
+    iwyu=8.0-3build1 \
+    cppcheck=1.90-4build1 \
     make=4.2.1-1.2 \
     llvm-11=1:11.0.0-2~ubuntu20.04.1 \
     && apt-get clean \
