--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -37,10 +37,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install docker 
 
-      - name: build 
+      - name: lint
         working-directory: ${{env.working-directory}}
-        run: python3 ./build.py   
-        
+        run: docker run --rm -i hadolint/hadolint < Dockerfile
+
+      - name: build
+        working-directory: ${{env.working-directory}}
+        run: python3 ./build.py
+
       - name: push
         working-directory: ${{env.working-directory}}
         if: startsWith(github.ref, 'refs/tags/docker-v')
