--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: lint
         working-directory: ${{env.working-directory}}
-        run: docker run --rm -i -v $(pwd)/hadolint.yaml:/.config/hadolint.yaml  hadolint/hadolint < Dockerfile
+        run: docker run --rm -i -v $(pwd)/docker/hadolint.yaml:/.config/hadolint.yaml  hadolint/hadolint < Dockerfile
 
       - name: build
         working-directory: ${{env.working-directory}}
