Dockerfile: Add LLDB

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     cppcheck=1.90-4build1 \
     make=4.2.1-1.2 \
     llvm-11=1:11.0.0-2~ubuntu20.04.1 \
+    lldb=1:10.0-50~exp1 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
